@@ -2,7 +2,7 @@
 /* DDD regexp scanner */
 
 %{
-// Copyright (C) 1997-1998 Technische Universitaet Braunschweig, Germany.
+// Copyright (C) 1997-1999 Technische Universitaet Braunschweig, Germany.
 // Written by Andreas Zeller <zeller@ips.cs.tu-bs.de>.
 // 
 // This file is part of DDD.
@@ -307,7 +307,7 @@ J	[A-Za-z_$][A-Za-z0-9_$.]*
 77[ ][]][0-9]*[1-9][[][a-zA-Z0-9][a-zA-Z0-9 ]*[a-zA-Z] RETURN(&rxjdbprompt_reverse);
 78Process{W}{D}:{_}			RETURN(&rxprocess1);
 79Process{W}{D}:			RETURN(&rxprocess2);
-80[(][^ )]*db[^)]*[)]{w}		RETURN(&rxprompt);
+80[(][^ )]*de?b[^)]*[)]{w}		RETURN(&rxprompt);
 81{C}[(]END[)].*			RETURN(&rxq);
 82@{_}{x}{_}:{C} 			RETURN(&rxreference);
 83{_}refresh({W}{C})?			RETURN(&rxrefresh_cmd);
